--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "dev": "nodemon app.js"
     },
     "dependencies": {
+        "aws-sdk": "^2.1172.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
