--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
         "pg": "^8.7.3",
-        "postgres": "^3.2.4"
+        "postgres": "^3.2.4",
+        "socket.io": "^4.5.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.18"
