--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "aws-sdk": "^2.1172.0",
+        "chai": "^4.3.6",
+        "chai-http": "^4.3.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
@@ -22,6 +24,7 @@
         "socket.io": "^4.5.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.18"
+        "nodemon": "^2.0.18",
+        "should": "^13.2.3"
     }
 }
