--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "express-fileupload": "^1.4.0",
+        "heroku": "^7.63.4",
         "pg": "^8.7.3",
         "postgres": "^3.2.4",
         "socket.io": "^4.5.1"
